<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_home_24"
        android:title="@string/bottom_nav_home_label"/>
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_shopping_cart_24"
        android:title="@string/bottom_nav_cart_label"/>
    <item
        android:id="@+id/ordersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_library_books_24"
        android:title="@string/bottom_nav_orders_label" />
    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_person_24"
        android:title="@string/bottom_nav_account_label"/>
</menu>