<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".ui.loginSignup.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signup_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_bg_img" />

        <TextView
            android:id="@+id/signup_welcome_hello_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/signup_welcome_hello"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/signup_image_view"
            app:layout_constraintTop_toTopOf="@id/signup_image_view" />

        <TextView
            android:id="@+id/signup_welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/signup_welcome_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/signup_image_view"
            app:layout_constraintTop_toBottomOf="@+id/signup_welcome_hello_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_name_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_image_view"
            app:placeholderText="@string/signup_name_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_mobile_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameOutlinedTextField"
            app:placeholderText="@string/signup_mobile_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_mobile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_email_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileOutlinedTextField"
            app:placeholderText="@string/signup_email_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_password_hint"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailOutlinedTextField"
            app:placeholderText="@string/signup_password_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_conf_password_hint"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordOutlinedTextField"
            app:placeholderText="@string/signup_cnf_password_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_cnf_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/signup_seller_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:checked="false"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/signup_seller_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordOutlinedTextField"
            app:switchPadding="4dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/signup_policy_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:checked="false"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/signup_switch_tnc_label"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_seller_switch"
            app:switchPadding="8dp"
            app:switchTextAppearance="@style/TextAppearance.MyTheme.Caption" />

        <TextView
            android:id="@+id/signup_error_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textColor="?attr/colorError"
            app:drawableStartCompat="@android:drawable/stat_notify_error"
            app:drawableTint="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_policy_switch"
            tools:text="Some error occured" />

        <TextView
            android:id="@+id/signup_login_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/signup_login_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_error_text_view" />

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/signup_btn_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_login_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>